--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     font-size: 7rem;
     text-transform: uppercase;
     font-weight: 800;
-    color: #555;
+    color: ##ff0505;
 }
 
 .main-title h2{
