--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ svg{
         font-size: 5rem;
         text-transform: uppercase;
         font-weight: 700;
-        color: #555;
+        color: #ff0505;
     }
     
     .main-title h2{
@@ -155,7 +155,7 @@ svg{
             font-size: 6rem;
             text-transform: uppercase;
             font-weight: 800;
-            color: #555;
+            color: #ff0505;
         }
         
         .main-title h2{
