--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ svg{
             font-size: 7rem;
             text-transform: uppercase;
             font-weight: 900;
-            color: #555;
+            color: #ff0505;
         }
         
         .main-title h2{
@@ -190,7 +190,7 @@ svg{
             font-size: 8rem;
             text-transform: uppercase;
             font-weight: 900;
-            color: #555;
+            color: #ff0505;
         }
         
         .main-title h2{
