--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ svg{
         font-size: 3rem;
         font-weight: 300;
         text-transform: uppercase;
+        color: #09ff00;
     }
     
      
