--- a/style.css
+++ b/style.css
@@ -129,13 +129,13 @@ svg {
 
 @media (min-width: 768px){
   .main-title h1{
-    font-size: 6vw;
+    font-size: 6rem;
     text-transform: uppercase;
     font-weight: 800;
     color: #fff;
   }
   .main-title h2{
-    font-size: 4vw;
+    font-size: 4rem;
     font-weight: 300;
     text-transform: uppercase;
   }
