--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 .main-title {
   text-align: center;
-  margin-top: 4vw;
-  margin-bottom: 8vw;
+  margin-top: 4rem;
+  margin-bottom: 8rem;
   text-shadow:
     1px 0px 1px #ccc, 0px 1px 1px #eee,
     2px 1px 1px #ccc, 1px 2px 1px #eee,
@@ -31,14 +31,14 @@ body {
 }
 
 .main-title h1 {
-  font-size: 7vw;
+  font-size: 7rem;
   text-transform: uppercase;
   font-weight: 800;
   color: #fff;
 }
 
  h2 {
-  font-size: 4vw;
+  font-size: 4rem;
   font-weight: 300;
   text-transform: uppercase;
   color: #fff;
@@ -85,7 +85,7 @@ svg {
   height: 35px;
   line-height: 35px;
   background-color: #f5f5f5;
-  font-size: 1.vw;
+  font-size: 1.rem;
 }
 
 /* Animations */
@@ -114,13 +114,13 @@ svg {
 /* Media Queries */
 @media (min-width: 640px){
   .main-title h1{
-    font-size: 5vw;
+    font-size: 5rem;
     text-transform: uppercase;
     font-weight: 700;
     color: #fff;
   }
   .main-title h2{
-    font-size: 3vw;
+    font-size: 3rem;
     font-weight: 300;
     text-transform: uppercase;
     color: #fff;
@@ -143,13 +143,13 @@ svg {
 
 @media (min-width: 1024px){
   .main-title h1{
-    font-size: 7vw;
+    font-size: 7rem;
     text-transform: uppercase;
     font-weight: 900;
     color: #fff;
   }
   .main-title h2{
-    font-size: 5vw;
+    font-size: 5rem;
     font-weight: 300;
     text-transform: uppercase;
   }
@@ -157,13 +157,13 @@ svg {
 
 @media (min-width: 1200px){
   .main-title h1{
-    font-size: 8vw;
+    font-size: 8rem;
     text-transform: uppercase;
     font-weight: 900;
     color: #fff;
   }
   .main-title h2{
-    font-size: 5vw;
+    font-size: 5rem;
     font-weight: 300;
     text-transform: uppercase;
   }
